# continual-growing

./: .gitignore  README.md  baseline_mlp_outputs.pt  pyproject.toml
configs/: defaults.yaml  hpo_lr_search.yaml  hpo_smoke.yaml  hpo_smoke_multi.yaml  mnist5_grow.yaml
docs/: exp_pipeline.md
src/: params.py  run.py  runtime.py  test_lateral_inhibition.py  test_lr_and_rho.py  test_mlp_backward_compatibility.py  utils.py
src/dataloaders/: cifar.py  mixture.py  mnist2.py  mnist5.py  pmnist.py
src/hpo/: __init__.py  cli.py  config.py  experiment.py  outputs.py  plots.py  runner.py  space.py  study.py  tags.py  test_tags.py
src/networks/: BatchNorm.py  BayesianConvs.py  FC.py  distributions.py  mlp_grow.py  resnet_grow.py
src/train/: trainer.py  utils.py
wandb/: latest-run
wandb/run-20260503_185335-df6c2p26/: run-df6c2p26.wandb
wandb/run-20260503_215346-e91sz09f/: run-e91sz09f.wandb
wandb/run-20260503_220956-5wgwzjae/: run-5wgwzjae.wandb
wandb/run-20260503_221059-5wy0f935/: run-5wy0f935.wandb
wandb/run-20260503_221147-h52vdpfn/: run-h52vdpfn.wandb
wandb/run-20260503_221213-5pwlczzh/: run-5pwlczzh.wandb
wandb/run-20260503_222532-zu844qau/: run-zu844qau.wandb
wandb/run-20260503_230632-wk3qyyat/: run-wk3qyyat.wandb
wandb/run-20260503_233533-y2s96f21/: run-y2s96f21.wandb
wandb/run-20260503_234256-tj8jcne0/: run-tj8jcne0.wandb
wandb/run-20260503_234759-n98iqsuf/: run-n98iqsuf.wandb
wandb/run-20260504_000616-4zf1vwpx/: run-4zf1vwpx.wandb
wandb/run-20260504_180559-dxs0ge7m/: run-dxs0ge7m.wandb
(+204 files in other folders)
